--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <script type="module" crossorigin src="/assets/index.6b89d952.js"></script>
+    <script type="module" crossorigin src="/demo-react/assets/index.fd3903c6.js"></script>
   </head>
   <body>
     <div id="root"></div>
